--- a/GoT.Rmd
+++ b/GoT.Rmd
@@ -110,18 +110,38 @@ E(g4)$weight <- book4$weight
 E(g5)$weight <- book5$weight
 ```
 
-### Описательная статистика
+## Описательная статистика
 
 ```{r}
-# Узлы
-vcount(g1)
+graphs <- list(
+"Книга 1" = g1,
+"Книга 2" = g2,
+"Книга 3" = g3,
+"Книга 4" = g4,
+"Книга 5" = g5
+)
 
-# Рёбра
-ecount(g1)
+summary_tbl <- purrr::imap_dfr(graphs, ~ tibble(
+Книга = .y,
+Узлы = vcount(.x),
+Рёбра = ecount(.x),
+Плотность = edge_density(.x),
+"Средняя степень (degree)" = mean(degree(.x)),
+"Средняя длина пути" = mean_distance(.x, directed = FALSE, unconnected = TRUE)
+))
 
-# Диады можно посчитать вручную. Направленный граф:
-vcount(g1) * (vcount(g1) - 1) / 2
+kable(summary_tbl, digits = 3, caption = "Описательные характеристики сети по книгам")
 ```
+
+* **Узлы**: количествво растет от книги к книге (с 187 в первой книге до 317 в пятой) => отражает расширение мира: появляются новые линии, новые дома, новые второстепенные герои.
+
+* **Рёбра**: в целом количество увеличивается, но не так быстро, как число узлов — с 684 до 760 (при этом максимум 1008 рёбер в книге 3). То есть новых персонажей становится много, но каждый из них взаимодействует не со «всеми подряд», а с ограниченным кругом.
+
+* **Плотность сети**:  постепенно падает с 0.039 в книге 1 до 0.015 в книге 5. Из всех теоретически возможных связей используется всё меньшая часть, мир становится более разбросанным, а сюжет разделяется на отдельные линии.
+
+* **Degree**: уменьшается с 7.32 до 4.80. В среднем один персонаж взаимодействует с меньшим количеством других, сеть становится менее «переплетённой» и более локальной — у героев формируются свои отдельные круги общения.
+
+* **Длина пути**: увеличивается с 14.11 в книге 1 до максимума 18.47 в книге 4, а затем немного снижается до 17.40 в книге 5 => чтобы связать двух случайных персонажей, нужно пройти через всё большее количество «посредников», сеть становится более растянутой и фрагментированной.
 
 ## Центральность
 
@@ -870,17 +890,132 @@ clo5
 
 </div>
 
+## Кластеризация сети
+
+### Алгоритм Louvain
+
+Алгоритм **Louvain** позволяет автоматически выявлять группы персонажей, которые чаще взаимодействуют друг с другом, чем с остальными участниками сети. Такие сообщества отражают скрытую структуру повествования: сюжетные линии, политические блоки и географические группы.
+
 ```{r}
-louvain_comm_m = cluster_louvain(g1)
-fg_comm_m = cluster_fast_greedy(g1)
-wt_comm_m = cluster_walktrap(g1)
-lp_comm_m = cluster_label_prop(g1)
-im_comm_m = cluster_infomap(g1)
+set.seed(123)
 ```
 
-### Модулярность
+#### Книга 1
 
-Сравним модулярность, чтобы определить какой из методов нам больше всего подойдет.
+```{r}
+louvain_book1 <- cluster_louvain(g1, weights = E(g1)$weight)
+comm1 <- membership(louvain_book1)
+n_comm1 <- length(unique(comm1))
+mod1 <- modularity(louvain_book1)
+
+paste(n_comm1, "сообществ,", "модулярность:", round(mod1, 3))
+```
+
+**Состав сообществ**
+
+```{r}
+communities_book1 <- split(names(comm1), comm1)
+community_summary1 <- tibble(
+community = names(communities_book1),
+size = sapply(communities_book1, length),
+members = sapply(communities_book1, function(x) paste(x, collapse = ", "))
+)
+knitr::kable(community_summary1, caption = "Состав сообществ (книга 1, Louvain)")
+```
+
+**Визуализация сообществ для книги 1**
+
+```{r fig.width=6, fig.height=5}
+par(mar = c(0, 0, 3, 0))
+
+set.seed(123)
+layout1 <- layout_with_fr(g1)
+deg1 <- degree(g1)
+
+plot(
+  g1,
+  layout = layout1,
+  vertex.color = as.factor(comm1), # цвет = сообщество Louvain
+  vertex.size = 3 + log1p(deg1) * 2, # размер по степени (лог-масштаб)
+  vertex.label = NA,
+  edge.width = 0.5 + (E(g1)$weight / max(E(g1)$weight)) * 2,
+  main = "Сообщества персонажей (книга 1, Louvain)"
+)
+```
+
+Алгоритм Louvain выделил 8 сообществ **8 сообществ** при модулярности **0.514**, и их состав хорошо соответствует основным сюжетным линиям первой книги:
+
+- Крупнейшее сообщество объединяет Ланнистеров, некоторых Талли, обитателей Долины и тех, кто связан с пленением Тириона и *событиями в Речных землях*.
+- Отдельное сообщество формируют персонажи *восточной линии* — Дейенерис, Дрого и её дотракийское окружение.
+- Ещё один крупный кластер — это *Ночной Дозор*: Джон Сноу, Сэм, Мормонт и другие братья на Стене.
+- *Центральное политическое сообщество* включает Эддарда Старка, Роберта Баратеона, Серсею, Вариса, Мизинца и других придворных.
+- Сансу, Арью, Джоффри и других придворных подростков объединяет отдельное сообщество, связанное со *столичными событиями*.
+- Северная группа включает Брана, Робба, Рикона, Теона и северных лордов — это *линия Винтерфелла*.
+- Два маленьких кластера состоят из персонажей, которые почти не взаимодействуют с другими персонажами и образуют самостоятельные небольшие группы.
+
+Такой результат подтверждает, что социальная структура мира «Игры престолов» имеет выраженную **кластерную организацию**, и каждый сюжет в книге формирует свой «остров» персонажей, активно взаимодействующих друг с другом, но лишь слабо связанных с внешними линиями.
+
+#### Книга 5
+
+```{r}
+louvain_book5 <- cluster_louvain(g5, weights = E(g5)$weight)
+comm5 <- membership(louvain_book5)
+n_comm5 <- length(unique(comm5))
+mod5 <- modularity(louvain_book5)
+
+paste(n_comm5, "сообществ,", "модулярность:", round(mod5, 3))
+```
+
+**Состав сообществ**
+
+```{r}
+communities_book5 <- split(names(comm5), comm5)
+community_summary5 <- tibble(
+community = names(communities_book5),
+size = sapply(communities_book5, length),
+members = sapply(communities_book5, function(x) paste(x, collapse = ", "))
+)
+knitr::kable(community_summary5, caption = "Состав сообществ (книга 5, Louvain)")
+```
+
+**Визуализация сообществ для книги 5**
+
+```{r fig.width=6, fig.height=5}
+par(mar = c(0, 0, 3, 0))
+
+set.seed(123)
+layout5 <- layout_with_fr(g5)
+deg5 <- degree(g5)
+
+plot(
+  g5,
+  layout = layout5,
+  vertex.color = as.factor(comm5),            # цвет = сообщество Louvain
+  vertex.size = 3 + log1p(deg5) * 2,         # размер по степени
+  vertex.label = NA,
+  edge.width = 0.5 + (E(g5)$weight / max(E(g5)$weight)) * 2,
+  main = "Сообщества персонажей (книга 5, Louvain)"
+)
+```
+
+В пятой книге выделено **10 сообществ** при модулярности **0.711**. Это ещё более высокое значение, чем в первой книге, что говорит о очень чётко выраженной разбиении сети на отдельные группы:
+
+- Крупнейшее сообщество объединяет Дейенерис, её советников, наёмников и городскую элиту Миирина и окрестных городов — это основная *восточная линия в Эссосе*.
+- Отдельный большой кластер составляют Тирион, Юный Грифф (Aegon), Коннингтон и связанные с ними персонажи, а также фигуры из прошлого (Рейгар, Элия, Тайвин, Роберт и др.) — это линия *«возвращения Таргариенов»* и размышлений о прошлой войне.
+- Ещё одно крупное сообщество — это *Стена*, Ночной Дозор и армия Станниса: Джон Сноу, Мелисандра, Манс, Тормунд, братья Дозора, северные лорды и «дикие».
+- Отдельный кластер описывает *северные интриги* вокруг Болтонов, Мандерли, Теона, а также включает персонажей из Браавоса (Безликие), что отражает переплетение линии с «Арьей/Сансой» и борьбой за Винтерфелл.
+- Два сообщества связаны с *Железными островами* и Грейджоями: одно вокруг Бейлона, Эурона и Виктариона, другое — вокруг Аши и её окружения.
+- Большое сообщество образуют *столичная и южная политика*: Серсея, Джейме, Маргери, Тиреллы, Кеван, Висшие Воробьи и дорнийская линия.
+- Небольшие кластеры соответствуют *мистической линии Брана на Севере за Стеной*, а также отдельным группам варгов и спутников Варамир Шестерки.
+- Один маленький кластер объединяет второстепенных персонажей Ночного Дозора, которые чаще взаимодействуют друг с другом, чем с остальными.
+
+В целом по пятой книге **кластеры становятся более многочисленными и специализированными**: мир делится не только на крупные регионы (Север, Стена, столица, Эссос), но и на отдельные политические и сюжетные проекты (поход Таргариенов, кампания Станниса, борьба за Север, религиозные движения, Железные острова).
+
+Сравнение кластеризации (алгоритм Louvain) первой и пятой книги показывает, что *по мере развития сюжета сеть персонажей становится намного более сложной и фрагментированной*. Персонажи всё сильнее «закрепляются» внутри своих локальных сюжетов и реже пересекаются с героями из других линий.
+
+### Сравнение алгоритмов кластеризации
+
+Сравним **модулярность**, чтобы определить какой из методов нам больше всего подойдет.
 
 ```{r}
 #присваиваем
@@ -888,7 +1023,7 @@ graphs <- list(g1 = g1, g2 = g2, g3 = g3, g4 = g4, g5 = g5)
 
 algo <- function(x){
   set.seed(123)
-  louvain_comm <- cluster_louvain(x, weights = E(x)$weight) #присваиваем опять веса, потому что результаты отличные, если не использовать присваивание
+  louvain_comm <- cluster_louvain(x, weights = E(x)$weight)
   fg_comm = cluster_fast_greedy(x, weights = E(x)$weight)
   wt_comm = cluster_walktrap(x, weights = E(x)$weight)
   lp_comm = cluster_label_prop(x, weights = E(x)$weight)
@@ -914,44 +1049,99 @@ algo <- function(x){
 }
 results <- map_dfr(graphs, ~ algo(.x), .id = "Book")
 knitr::kable(results, digits = 3, caption = "Средние показатели алгоритмов по 5 книгам")
-results
 ```
 
-Таким образом мы выберем 2 алгоритма *Louvain* и *Walktrap*
+Сравнение алгоритмов показывает, что *Louvain* и *Walktrap* стабильно дают наибольшую модулярность по всем пяти книгам. Это означает, что они лучше остальных разделяют
+сеть на структурно плотные сообщества.
 
-```{r}
-n_comm <- length(unique(membership(louvain_comm_m)))
-colors_vec <- grDevices::rainbow(n_comm)
+Поскольку **Louvain** работает быстрее и широко используется в анализе крупных сетей, мы выбираем именно его в качестве основного метода интерпретации сообществ.
 
-plot(g1, 
-     vertex.label = NA,
-     edge.arrow.size = 0.3,
-     main = "Сообщества с размером узлов по степени")
+### Визуализация кластеров для 1 и 5 книги
 
-legend("topright", 
-       legend = paste("Сообщество", 1:n_comm),
-       col = colors_vec, pch = 11, pt.cex = 2)
+```{r fig.width=10, fig.height=4}
+par(mfrow = c(1, 2), mar = c(0, 0, 3, 0))
+
+set.seed(123)
+plot(
+  g1,
+  layout = layout_with_fr(g1),
+  vertex.color = comm1,
+  vertex.size = 4,
+  vertex.label = NA,
+  edge.width = E(g1)$weight / max(E(g1)$weight) * 2,
+  main = "Сообщества книга 1"
+)
+
+set.seed(123)
+plot(
+  g5,
+  layout = layout_with_fr(g5),
+  vertex.color = comm5,
+  vertex.size = 4,
+  vertex.label = NA,
+  edge.width = E(g5)$weight / max(E(g5)$weight) * 2,
+  main = "Сообщества книга 5"
+)
+
+par(mfrow = c(1, 1))
 ```
 
-Визуализируем
+На сравнительной визуализации хорошо видно, как меняется структура сети между первой и пятой книгами.
 
-```{r}
-plot(g1, layout=layout_with_fr,
-     vertex.label.cex = 0.7, 
-     vertex.size = 5,         
-     edge.width = 0.5)
-```
+В *первой книге* сообщества выглядят более компактными и крупными: персонажи чётко сгруппированы по нескольким 
+основным сюжетным линиям, и связи между кластерами относительно редки.
 
-```{r}
-plot(g3, layout=layout_with_fr,
-     vertex.label.cex = 0.7, 
-     vertex.size = 5,         
-     edge.width = 0.5)
-```
+В *пятой книге* картина становится значительно более фрагментированной — появляется больше сообществ, они меньшего размера и расположены более рассыпано. Это отражает усложнение и расширение мира: сюжет делится на множество локальных линий, внутри которых связи плотные, а между ними — более слабые и редкие.
 
-```{r}
-plot(g3, layout=layout_with_fr,
-     vertex.label.cex = 0.7, 
-     vertex.size = 5,         
-     edge.width = 0.5)
-```
+## Сравнение структуры сети между книгами
+
+Если сопоставить сетевые метрики по пяти книгам, можно заметить несколько закономерностей.
+
+1. По мере развития сюжета **растёт количество узлов и рёбер**: в мир последовательно вводятся новые персонажи, а уже знакомые герои начинают взаимодействовать с более широким кругом людей. Это отражается в увеличении средней степени и изменении плотности сети.
+
+2. **Роль отдельных персонажей как структурных центров меняется во времени**. В первой книге центральны в основном представители дома Старков и королевской власти (Эддард Старк, Роберт Баратеон, Кейтилин Старк), тогда как в третьей и пятой книгах ключевыми становятся Джон Сноу, Тирион Ланнистер и Дейенерис Таргариен. Это соответствует тому, как повествование смещается от относительно локального конфликта домов к более масштабной борьбе за будущее Вестероса и Эссоса.
+
+3. **Кластерная структура сети остаётся довольно устойчивой**: большинство сообществ можно интерпретировать как отдельные сюжетные линии или группы домов. Однако между первой и пятой книгами появляются новые кластеры, связанные с восточными городами и линией одичалых, а связи между старыми сообществами усиливаются. С точки зрения сетевого анализа это можно трактовать как постепенное «сшивание» разных частей мира в единую, но всё ещё фрагментированную систему.
+
+
+## Выводы
+
+### Что мы узнали о структуре мира ИП?
+
+### Как меняются элиты и ключевые посредники по книгам?
+
+### Чем результаты могут быть полезны другим людям/компаниям (навыки анализа сложных сетей, моделирование сюжетов, сериалы, игры и т.д.)?
+
+### Ограничения данных и идеи продолжения проекта».
+
+❗️Сгенерил чатик (можно перефразировать и кайф):
+
+Наш проект был посвящён анализу сети персонажей цикла «Песнь Льда и Пламени» на основе данных о совместных появлениях в главах пяти книг. Мы рассматривали персонажей как узлы сети, а их совместные появления — как рёбра, дополнительно учитывая вес связи. Такой подход позволяет взглянуть на знакомый сюжет не как на набор отдельных линий, а как на единую сложную систему взаимодействий.
+
+Во-первых, сетевой анализ подтвердил интуитивное ощущение того, что мир «Игры престолов» сильно фрагментирован. Даже в первой книге персонажи распределены по нескольким относительно автономным кластерам, которые хорошо совпадают с ключевыми сюжетными арками: Север и дом Старков, королевский двор и Ланнистеры, восточная линия Дейенерис. Алгоритмы кластеризации (в частности, Louvain) автоматически выделяют эти группы, что говорит о том, что структура повествования достаточно чётко зашита в паттерны взаимодействий персонажей.
+
+Во-вторых, мы увидели, как меняется состав центральных узлов при переходе от книги к книге. На ранних этапах историю структурируют Эддард Старк и Роберт Баратеон, вокруг которых вращается политический порядок старого режима. Постепенно их место занимают Тирион Ланнистер, Джон Сноу, Дейенерис Таргариен и Станнис Баратеон. Это отражает не только сюжетные повороты (смерти и перевороты), но и глубокую перестройку сети власти: центр тяжести смещается от прежних элит к новым игрокам.
+
+В-третьих, сетевые метрики показывают, что важность персонажа не всегда напрямую связана с количеством его появлений. Некоторые герои с умеренным числом контактов оказываются критически важными посредниками, через которых проходят кратчайшие пути между кластерами. Такие узлы, обладающие высокой betweenness centrality, можно рассматривать как точки потенциального «разрыва» сети: их устранение теоретически способно сильно фрагментировать повествовательное пространство.
+
+С практической точки зрения подобный анализ можно применять не только к художественным произведениям, но и к другим сложным системам — от корпоративных структур до социальных движений. Работа с относительно безопасным и понятным кейсом вроде «Игры престолов» позволяет освоить инструменты сетевого анализа, интерпретацию метрик и базовые подходы к работе с данными. В дальнейшем ту же логику можно перенести на реальные социальные сети, профессиональные коммуникации или политические взаимодействия.
+
+Наш проект можно развить несколькими способами. Например, добавить эмоциональную окраску связей (дружба, конфликт, нейтральное взаимодействие), построить динамическую сеть по главам или сравнить книжную структуру с сериалом HBO. Это позволило бы ещё точнее понять, как выбор авторов и сценаристов влияет на архитектуру мира и восприятие зрителями ключевых персонажей.
+
+## Состав команды и распределение обязанностей
+
+В работе над проектом участвовали: **Астапенкова Арина**, **Горчинская Арина** и **Турутин Никита**.
+
+- *Астапенкова Арина* отвечала за очистку данных, построение графов для каждой книги, расчёт основных сетевых показателей и подготовку визуализаций.
+- *Горчинская Арина* занималась поиском и предварительным изучением датасета, описанием предметной области, а также написанием текстовых интерпретаций метрик центральности для ключевых персонажей.
+- *Турутин Никита* реализовал кластерный анализ, сравнение модулярности, а также помогал со структурированием отчёта и формулировкой общих выводов.
+
+Таким образом, все участники принимали участие и в технической, и в содержательной частях проекта.
+
+<div style="display:flex; justify-content:center; margin:25px 0;">
+  <figure style="text-align:center;">
+    <img src="images/Jon Snow.jpg"
+         style="width:300px; border-radius:12px;">
+    <figcaption style="margin-top:6px; font-size:20px; color:#555;">Зима близко!</figcaption>
+  </figure>
+</div>
