--- a/GoT.Rmd
+++ b/GoT.Rmd
@@ -896,6 +896,49 @@ clo5
 
 ## Кластеризация сети
 
+### Сравнение алгоритмов кластеризации
+
+Сравним **модулярность**, чтобы определить какой из методов нам больше всего подойдет.
+
+```{r}
+#присваиваем
+graphs <- list(g1 = g1, g2 = g2, g3 = g3, g4 = g4, g5 = g5)
+
+algo <- function(x){
+  set.seed(123)
+  louvain_comm <- cluster_louvain(x, weights = E(x)$weight)
+  fg_comm = cluster_fast_greedy(x, weights = E(x)$weight)
+  wt_comm = cluster_walktrap(x, weights = E(x)$weight)
+  lp_comm = cluster_label_prop(x, weights = E(x)$weight)
+  im_comm = cluster_infomap(x, e.weights = E(x)$weight)
+  
+  tibble(
+    Algorithm = c("Louvain", "Walktrap", "Fast Greedy", "Infomap", "Label Prop"),
+    Modularity = c(
+      modularity(louvain_comm),
+      modularity(fg_comm),
+      modularity(wt_comm),
+      modularity(im_comm),
+      modularity(lp_comm)
+    ),
+    Communities = c(
+      modularity(louvain_comm),
+      modularity(fg_comm),
+      modularity(wt_comm),
+      modularity(im_comm),
+      modularity(lp_comm)
+    )
+  ) |> arrange(-Modularity)
+}
+results <- map_dfr(graphs, ~ algo(.x), .id = "Book")
+knitr::kable(results, digits = 3, caption = "Средние показатели алгоритмов по 5 книгам")
+```
+
+Сравнение алгоритмов показывает, что *Louvain* и *Walktrap* стабильно дают наибольшую модулярность по всем пяти книгам. Это означает, что они лучше остальных разделяют
+сеть на структурно плотные сообщества.
+
+Поскольку **Louvain** работает быстрее и широко используется в анализе крупных сетей, мы выбираем именно его в качестве основного метода интерпретации сообществ.
+
 ### Алгоритм Louvain
 
 Алгоритм **Louvain** позволяет автоматически выявлять группы персонажей, которые чаще взаимодействуют друг с другом, чем с остальными участниками сети. Такие сообщества отражают скрытую структуру повествования: сюжетные линии, политические блоки и географические группы.
@@ -926,7 +969,6 @@ members = sapply(communities_book1, function(x) paste(x, collapse = ", "))
 )
 knitr::kable(community_summary1, caption = "Состав сообществ (книга 1, Louvain)")
 ```
-
 
 **Визуализация сообществ для книги 1**
 
@@ -977,28 +1019,6 @@ visNetwork(nodes, edges) |>
   )
 ) |>
 visLayout(randomSeed = 123)
-```
-
-
-
-#### **Детальная визуализация для 1 книги**
-
-```{r fig.width=6, fig.height=5}
-par(mar = c(0, 0, 3, 0))
-
-set.seed(123)
-layout1 <- layout_with_fr(g1)
-deg1 <- degree(g1)
-
-plot(
-  g1,
-  layout = layout1,
-  vertex.color = as.factor(comm1), # цвет = сообщество Louvain
-  vertex.size = 3 + log1p(deg1) * 2, # размер по степени (лог-масштаб)
-  vertex.label = NA,
-  edge.width = 0.5 + (E(g1)$weight / max(E(g1)$weight)) * 2,
-  main = "Сообщества персонажей (книга 1, Louvain)"
-)
 ```
 
 Алгоритм Louvain выделил 8 сообществ **8 сообществ** при модулярности **0.514**, и их состав хорошо соответствует основным сюжетным линиям первой книги:
@@ -1087,27 +1107,6 @@ visNetwork(nodes, edges) |>
 visLayout(randomSeed = 123)
 ```
 
-
-#### **Детальная визуализация для 5 книги**
-
-```{r fig.width=6, fig.height=5}
-par(mar = c(0, 0, 3, 0))
-
-set.seed(123)
-layout5 <- layout_with_fr(g5)
-deg5 <- degree(g5)
-
-plot(
-  g5,
-  layout = layout5,
-  vertex.color = as.factor(comm5),            # цвет = сообщество Louvain
-  vertex.size = 3 + log1p(deg5) * 2,         # размер по степени
-  vertex.label = NA,
-  edge.width = 0.5 + (E(g5)$weight / max(E(g5)$weight)) * 2,
-  main = "Сообщества персонажей (книга 5, Louvain)"
-)
-```
-
 В пятой книге выделено **10 сообществ** при модулярности **0.711**. Это ещё более высокое значение, чем в первой книге, что говорит о очень чётко выраженной разбиении сети на отдельные группы:
 
 - Крупнейшее сообщество объединяет Дейенерис, её советников, наёмников и городскую элиту Миирина и окрестных городов — это основная *восточная линия в Эссосе*.
@@ -1123,50 +1122,9 @@ plot(
 
 Сравнение кластеризации (алгоритм Louvain) первой и пятой книги показывает, что *по мере развития сюжета сеть персонажей становится намного более сложной и фрагментированной*. Персонажи всё сильнее «закрепляются» внутри своих локальных сюжетов и реже пересекаются с героями из других линий.
 
-### Сравнение алгоритмов кластеризации
+### Сравнение структуры сети между книгами
 
-Сравним **модулярность**, чтобы определить какой из методов нам больше всего подойдет.
-
-```{r}
-#присваиваем
-graphs <- list(g1 = g1, g2 = g2, g3 = g3, g4 = g4, g5 = g5)
-
-algo <- function(x){
-  set.seed(123)
-  louvain_comm <- cluster_louvain(x, weights = E(x)$weight)
-  fg_comm = cluster_fast_greedy(x, weights = E(x)$weight)
-  wt_comm = cluster_walktrap(x, weights = E(x)$weight)
-  lp_comm = cluster_label_prop(x, weights = E(x)$weight)
-  im_comm = cluster_infomap(x, e.weights = E(x)$weight)
-  
-  tibble(
-    Algorithm = c("Louvain", "Walktrap", "Fast Greedy", "Infomap", "Label Prop"),
-    Modularity = c(
-      modularity(louvain_comm),
-      modularity(fg_comm),
-      modularity(wt_comm),
-      modularity(im_comm),
-      modularity(lp_comm)
-    ),
-    Communities = c(
-      modularity(louvain_comm),
-      modularity(fg_comm),
-      modularity(wt_comm),
-      modularity(im_comm),
-      modularity(lp_comm)
-    )
-  ) |> arrange(-Modularity)
-}
-results <- map_dfr(graphs, ~ algo(.x), .id = "Book")
-knitr::kable(results, digits = 3, caption = "Средние показатели алгоритмов по 5 книгам")
-```
-
-Сравнение алгоритмов показывает, что *Louvain* и *Walktrap* стабильно дают наибольшую модулярность по всем пяти книгам. Это означает, что они лучше остальных разделяют
-сеть на структурно плотные сообщества.
-
-Поскольку **Louvain** работает быстрее и широко используется в анализе крупных сетей, мы выбираем именно его в качестве основного метода интерпретации сообществ.
-
-### Визуализация кластеров для 1 и 5 книги
+Визуализация кластеров для 1 и 5 книги
 
 ```{r fig.width=10, fig.height=4}
 par(mfrow = c(1, 2), mar = c(0, 0, 3, 0))
@@ -1203,8 +1161,6 @@ par(mfrow = c(1, 1))
 
 В *пятой книге* картина становится значительно более фрагментированной — появляется больше сообществ, они меньшего размера и расположены более рассыпано. Это отражает усложнение и расширение мира: сюжет делится на множество локальных линий, внутри которых связи плотные, а между ними — более слабые и редкие.
 
-## Сравнение структуры сети между книгами
-
 Если сопоставить сетевые метрики по пяти книгам, можно заметить несколько закономерностей.
 
 1. По мере развития сюжета **растёт количество узлов и рёбер**: в мир последовательно вводятся новые персонажи, а уже знакомые герои начинают взаимодействовать с более широким кругом людей. Это отражается в увеличении средней степени и изменении плотности сети.
@@ -1212,7 +1168,6 @@ par(mfrow = c(1, 1))
 2. **Роль отдельных персонажей как структурных центров меняется во времени**. В первой книге центральны в основном представители дома Старков и королевской власти (Эддард Старк, Роберт Баратеон, Кейтилин Старк), тогда как в третьей и пятой книгах ключевыми становятся Джон Сноу, Тирион Ланнистер и Дейенерис Таргариен. Это соответствует тому, как повествование смещается от относительно локального конфликта домов к более масштабной борьбе за будущее Вестероса и Эссоса.
 
 3. **Кластерная структура сети остаётся довольно устойчивой**: большинство сообществ можно интерпретировать как отдельные сюжетные линии или группы домов. Однако между первой и пятой книгами появляются новые кластеры, связанные с восточными городами и линией одичалых, а связи между старыми сообществами усиливаются. С точки зрения сетевого анализа это можно трактовать как постепенное «сшивание» разных частей мира в единую, но всё ещё фрагментированную систему.
-
 
 ## Выводы ☺
 
@@ -1235,7 +1190,6 @@ par(mfrow = c(1, 1))
 ### Ограничения данных и идеи продолжения проекта».
 
 Как можно продолжить наше исследование? Например, можно учитывать, как герои относятся друг к другу (дружба, вражда), или построить сеть по каждой главе, посмотреть, как все меняется. Еще можно сравнить структуру книг и сериала от HBO. Так мы лучше поймем, как решения авторов и сценаристов влияют на мир и как зрители воспринимают героев.
-
 
 ## Состав команды и распределение обязанностей
 
