--- a/GoT.Rmd
+++ b/GoT.Rmd
@@ -1173,24 +1173,23 @@ par(mfrow = c(1, 1))
 
 ### Что мы узнали о структуре мира ИП?
 
-Наш проект был посвящён анализу сети персонажей цикла «Песнь Льда и Пламени» на основе данных о совместных появлениях в главах пяти книг. Мы рассматривали персонажей как узлы сети, а их совместные появления как рёбра, дополнительно учитывая вес связи. Получилось интересно: сюжет выглядит не просто как куча историй, а как единая система, где все друг с другом связаны.
+Наш проект был посвящён анализу сети персонажей «Песнь Льда и Пламени» на основе данных о совместных появлениях в главах пяти книг. Мы рассматривали персонажей как узлы сети, а их совместные появления как рёбра, дополнительно учитывая вес связи. Получилось интересно: сюжет выглядит не просто как куча историй, а как единая система, где все друг с другом связаны.
 
 ### Как меняются элиты и ключевые посредники по книгам?
 
-Во-первых, мир «Игры престолов» сильно фрагментирован. Уже в первой книге герои разбиты на группы, который хорошо совпадаю с основным сюжетом: Север и дом Старков, королевский двор и Ланнистеры, восточная линия Дейенерис. Алгоритмы кластеризации (Louvain) автоматически выделяют эти группы, что показывает: общая структура истории четко видна во взаимодействии героев.
+Во-первых, мир «Игры престолов» сильно фрагментирован. Уже в первой книге герои разбиты на группы, которые хорошо совпадаю с основным сюжетом: Север и дом Старков, королевский двор и Ланнистеры, восточная линия Дейенерис. Алгоритмы кластеризации (Louvain) автоматически выделяют эти группы, что показывает: общая структура истории четко видна во взаимодействии героев.
 
-Во-вторых, мы увидели, как меняется состав центральных узлов при переходе от книги к книге. Сначала это Эддард Старк и Роберт Баратеон, вокруг которых крутится основной сюжет. Постепенно их место занимают Тирион Ланнистер, Джон Сноу, Дейенерис Таргариен и Станнис Баратеон. Это не просто повороты сюжета (кто умер, кто пришел к власти), а перестройка всей системы власти: старые шишки уходят, появляются новые.
+Во-вторых, мы увидели, как меняется состав центральных узлов при переходе от книги к книге. Сначала это Эддард Старк и Роберт Баратеон, вокруг которых крутится основной сюжет. Постепенно их место занимают Тирион Ланнистер, Джон Сноу, Дейенерис Таргариен и Станнис Баратеон. Это не просто повороты сюжета (кто умер, кто пришел к власти), а перестройка всей системы власти.
 
-В-третьих, сетевые метрики показывают, что важный персонаж не всегда напрямую связана с количеством его появлений.Некоторые герои вроде и не так часто встречаются, но оказываются важными связующими звеньями. Они как мостики между разными группами. Такие узлы, обладающие высокой betweenness centrality, можно рассматривать как точки потенциального «разрыва» сети, если их убрать, мир Игры престолов распадется на части.
+В-третьих, сетевые метрики показывают, что важность персонажа не всегда напрямую связана с количеством его появлений. Некоторые герои не так часто встречаются в сюжете, но оказываются важными связующими звеньями между разными группами. Такие узлы, обладающие высокой betweenness centrality, можно рассматривать как точки потенциального «разрыва» сети, если их убрать, мир Игры престолов распадется на части.
 
 ### Чем результаты могут быть полезны другим людям/компаниям (навыки анализа сложных сетей, моделирование сюжетов, сериалы, игры и т.д.)?
 
-Что это дает? Такой анализ можно использовать не только для книг. Похожим образом можно копаться в устройстве компаний или социальных движений. Игра престолов – понятный пример, на котором удобно учиться анализировать сети, понимать разные показатели и вообще работать с данными. Потом эти знания можно применять к реальным социальным сетям, общению на работе или даже к политике.
+Наш анализ можно использовать не только для книг. Похожим образом можно изучать устройство компаний или социальных движений. Игра престолов – понятный пример, на котором удобно учиться анализировать сети, понимать разные показатели и работать с данными. В будущем эти знания можно применять к реальным социальным сетям.
 
 ### Ограничения данных и идеи продолжения проекта».
 
-Как можно продолжить наше исследование? Например, можно учитывать, как герои относятся друг к другу (дружба, вражда), или построить сеть по каждой главе, посмотреть, как все меняется. Еще можно сравнить структуру книг и сериала от HBO. Так мы лучше поймем, как решения авторов и сценаристов влияют на мир и как зрители воспринимают героев.
-
+Если расширять наш проект, то можно изучить, как герои относятся друг к другу (дружба, вражда). Также можно построить сеть по каждой главе, чтобы детальнее рассмотреть, как меняется сюжет. Еще можно сравнить структуру книг и сериала от HBO, чтобы посмотреть какие решения авторов и сценаристов влияют на мир и в чем разница между киновселенной и оригинальной вселенной.
 ## Состав команды и распределение обязанностей
 
 В работе над проектом участвовали: **Астапенкова Арина**, **Горчинская Арина** и **Турутин Никита**.
