--- a/GoT.Rmd
+++ b/GoT.Rmd
@@ -1186,9 +1186,9 @@ par(mfrow = c(1, 1))
 
 Наш анализ можно использовать не только для книг. Похожим образом можно изучать устройство компаний или социальных движений. Игра престолов – понятный пример, на котором удобно учиться анализировать сети, понимать разные показатели и работать с данными. В будущем эти знания можно применять к реальным социальным сетям.
 
-### Ограничения данных и идеи продолжения проекта».
+### Ограничения данных и идеи продолжения проекта.
 
-Если расширять наш проект, то можно изучить, как герои относятся друг к другу (дружба, вражда). Также можно построить сеть по каждой главе, чтобы детальнее рассмотреть, как меняется сюжет. Еще можно сравнить структуру книг и сериала от HBO, чтобы посмотреть какие решения авторов и сценаристов влияют на мир и в чем разница между киновселенной и оригинальной вселенной.
+Если расширять наш проект, то можно добавить эмоциональную окраску связей (дружба, конфликт, нейтральное взаимодействие). Также можно построить сеть по каждой главе, чтобы детальнее рассмотреть, как меняется сюжет. Еще можно сравнить структуру книг и сериала от HBO, чтобы посмотреть какие решения авторов и сценаристов влияют на мир и в чем разница между киновселенной и оригинальной вселенной.
 
 ## Состав команды и распределение обязанностей
 
